fixed problem in notebook

--- a/rsna2018-notes.ipynb
+++ b/rsna2018-notes.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "14  00aecb01-a116-45a2-956c-08d2fa55433f  288.0  322.0   94.0   135.0       1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "5  8c984367-b094-429a-b8cf-a9aba99e8ff9  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "24426       1  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -473,6 +473,11 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.patches import Rectangle\n",
+    "from PIL import Image\n",
+    "%matplotlib inline\n",
+    "\n",
     "fig, m_axs = plt.subplots(3, 2, figsize = (20, 30))\n",
     "for c_ax, (pid, rows) in zip(m_axs.flatten(), df_sample_labels.groupby(['patientId'])):\n",
     "    c_ax.imshow(np.array(Image.open('rsna/sample_pred/{}-pred.jpg'.format(pid))))\n",
